Fixed text overflow issue with checkbox items in small screens

--- a/Frontend/src/Components/Notes/editorstyles.css
+++ b/Frontend/src/Components/Notes/editorstyles.css
@@ -1,46 +1,3 @@
-/* ul[data-type="taskList"] {
-  list-style: none;
-  padding: 0;
-}
-
-ul[data-type="taskList"] p {
-  font-weight: 500;
-  margin: 0;
-  font-size: 1rem;
-}
-
-ul[data-type="taskList"] li {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-
-ul[data-type="taskList"] li > label {
-  display: inline-flex;
-  align-items: center;
-  user-select: none;
-  margin: 0;
-  height: fit-content;
-}
-ul[data-type="taskList"] li > div {
-  margin: 0;
-}
-
-ul[data-type="taskList"] li input {
-  height: 1.07rem;
-  width: 1.07rem;
-  margin: 0;
-}
-
-ul[data-type="taskList"] li ul li,
-ul[data-type="taskList"] li ol li {
-  display: list-item;
-}
-
-ul[data-type="taskList"] > li {
-  display: flex;
-} */
-
 ul[data-type="taskList"] {
   list-style: none;
   padding: 0;
@@ -51,6 +8,7 @@ ul[data-type="taskList"] p {
   font-size: 1rem;
   margin: -0.5rem 0 0;
   transform: translateY(-0.1rem);
+  text-wrap: wrap;
 }
 ul[data-type="taskList"] li > div {
   margin: 0;
@@ -58,22 +16,25 @@ ul[data-type="taskList"] li > div {
 }
 
 ul[data-type="taskList"] li {
+  width: 100%;
   display: flex;
   gap: 0.5rem;
   padding: 0;
   align-items: baseline;
   justify-content: space-between;
 }
+
 ul[data-type="taskList"] li > label {
   display: inline-flex;
+  aspect-ratio: 1 / 1;
   align-items: center;
   user-select: none;
   margin: 0;
-  height: fit-content;
 }
 ul[data-type="taskList"] li input {
   height: 1rem;
   min-width: 25px;
+
   width: 100%;
   margin: 0;
   outline: 0;
@@ -81,6 +42,9 @@ ul[data-type="taskList"] li input {
 }
 ul[data-type="taskList"] li > div {
   flex: 1 1 auto;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
 }
 ul[data-type="taskList"] li ul li,
 ul[data-type="taskList"] li ol li {
